--- a/appsettings.json
+++ b/appsettings.json
@@ -2,18 +2,21 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=VM-104;User Id=Training;Password=May2022#;Database=Training;TrustServerCertificate=True;"
   },
-  "ApiBaseUrl": "https://localhost:7129", 
+  "ApiBaseUrl": "https://localhost:7129",
 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "TaskNotificationSettings": {
     "EmailNotificationIntervalHours": 25,
     "TaskCheckIntervalMinutes": 2
   },
+
   "AllowedHosts": "*"
 
 }
